Fix trailing / in Dockerfile

--- a/template/docker/app.Dockerfile.jinja
+++ b/template/docker/app.Dockerfile.jinja
@@ -40,4 +40,4 @@ COPY tests /app/tests
 
 # Set Python path for inside-container resolution
 ENV PYTHONPATH=/app/src
-ENV PATH="/opt/venv/bin:$PATH" \
+ENV PATH="/opt/venv/bin:$PATH"
